2005-09-23  Moritz Schulte  <moritz@g10code.com>

	Reorganized source tree.
	
	New file: core.c (based on former file cipher/prime.c).
	New files: gcrypt-prime-common.h, gcrypt-prime.h,
	gcrypt-prime-internal.h, interface.c, Makefile.am, README.