@@ -39,7 +39,8 @@ static gcry_core_mpi_t gen_prime (gcry_core_context_t ctx,
 			     void *extra_check_arg);
 static int check_prime (gcry_core_context_t ctx,
 			gcry_core_mpi_t prime, gcry_core_mpi_t val_2,
-			gcry_prime_check_func_t cb_func, void *cb_arg);
+			int rm_rounds, gcry_prime_check_func_t cb_func,
+			void *cb_arg);
 static int is_prime (gcry_core_context_t ctx, gcry_core_mpi_t n, int steps, int *count);
 static void m_out_of_n (gcry_core_context_t ctx, char *array, int m, int n);
 
@@ -359,9 +360,8 @@ prime_generate_internal (gcry_core_context_t ctx,
       else
 	count2 = 0;
     }
-  while (!
-	 ((nprime == pbits)
-	  && check_prime (ctx, prime, val_2, cb_func, cb_arg)));
+  while (! ((nprime == pbits)
+	    && check_prime (ctx, prime, val_2, 5, cb_func, cb_arg)));
 
   if (GCRY_CORE_DEBUGGING_PRIME (ctx))
     {
@@ -636,11 +636,12 @@ gen_prime (gcry_core_context_t ctx, unsigned int nbits, int secret,
 
 /****************
  * Returns: true if this may be a prime
+ * RM_ROUNDS gives the number of Rabin-Miller tests to run.
  */
 static int
 check_prime (gcry_core_context_t ctx,
 	     gcry_core_mpi_t prime, gcry_core_mpi_t val_2,
-	     gcry_prime_check_func_t cb_func, void *cb_arg)
+	     int rm_rounds, gcry_prime_check_func_t cb_func, void *cb_arg)
 {
   int count = 0;
 
@@ -680,7 +681,7 @@ check_prime (gcry_core_context_t ctx,
   if (!cb_func || cb_func (cb_arg, GCRY_PRIME_CHECK_AT_MAYBE_PRIME, prime))
     {
       /* Perform stronger tests. */
-      if (is_prime (ctx, prime, 5, &count))
+      if (is_prime (ctx, prime, rm_rounds, &count))
 	{
 	  if (!cb_func
 	      || cb_func (cb_arg, GCRY_PRIME_CHECK_AT_GOT_PRIME, prime))
@@ -707,6 +708,9 @@ is_prime (gcry_core_context_t ctx, gcry_core_mpi_t n, int steps, int *count)
   unsigned i, j, k;
   int rc = 0;
   unsigned nbits = gcry_core_mpi_get_nbits (ctx, n);
+
+  if (steps < 5) /* Make sure that we do at least 5 rounds. */
+    steps = 5; 
 
   gcry_core_mpi_sub_ui (ctx, nminus1, n, 1);
 
@@ -945,7 +949,9 @@ _gcry_prime_check (gcry_core_context_t ctx, gcry_core_mpi_t x, unsigned int flag
   gcry_error_t err = 0;
   gcry_core_mpi_t val_2 = gcry_core_mpi_alloc_set_ui (ctx, 2);	/* Used by the Fermat test. */
 
-  if (!check_prime (ctx, x, val_2, NULL, NULL))
+  /* We use 64 rounds because the prime we are going to test is not
+     guaranteed to be a random one. */
+  if (! check_prime (ctx, x, val_2, 64, NULL, NULL))
     err = gcry_core_error (GPG_ERR_NO_PRIME);
 
   gcry_core_mpi_release (ctx, val_2);
